# TDGeometry

./: .gitattributes  .gitignore  CMakeLists.txt  CMake_inc.cmake  README.md  TDGeoViewer.vcxproj  tab2geo.sln  tab2geo.vcxproj  tdgeometry.sln
TD/: m_head.toe
data/geo/: pnt.txt  pol.txt
data/m_head/: pnt.txt
data/shader/: hemi.frag  hemidir.frag
doc/TDGeomGLES/: TDGeomGLES.sln  TDGeomGLES.vcxproj
doc/TDGeomGLES/data/f_dummy/: pnt.txt  pol.txt
doc/TDGeomGLES/data/m_head/: pol.txt
doc/TDGeomGLES/src/: GLDraw.cpp  GLDraw.hpp  TDGeomGLES.cpp  TDGeometry.cpp  TDGeometry.hpp
doc/TDGeomGLES/td/: f_dummy.bhclassic  f_dummy.toe  m_head.hclassic  m_head.toe
samples/TDGeoViewer/: CMakeLists.txt  README.md  TDGeoViewer.vcxproj
samples/TDGeoViewer/src/: GLDraw.cpp  GLDraw.hpp  GLSys.cpp  GLSys.hpp  TDGeoViewer.cpp
samples/TDGeoViewer/src/shader/: vtx.vert
samples/tab2geo/: CMakeLists.txt  README.md  tab2geo.vcxproj
samples/tab2geo/src/: tab2geo.cpp
src/: GLDraw.cpp  GLDraw.hpp  TDGeometry.cpp  TDGeometry.hpp  tab2geo.cpp
